[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/UITooltip.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/theme.tres" type="Theme" id=2]
[ext_resource path="res://interface/UIInventory.gd" type="Script" id=4]

[node name="UIInventory" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 960.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -80.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="UITooltip" parent="." instance=ExtResource( 1 )]
visible = false
margin_right = 310.0
margin_bottom = 137.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -80.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 34.0
text = "Inventory"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 720.0
margin_bottom = 58.0

[node name="ItemGrid" type="GridContainer" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 720.0
margin_bottom = 680.0
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 700.0
margin_right = 720.0
margin_bottom = 760.0
rect_min_size = Vector2( 0, 60 )
custom_constants/separation = 20
alignment = 1

[node name="AddItemButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Add Item"

[node name="RemoveItemButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 370.0
margin_right = 720.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Remove Item"
